@@ -9,18 +9,19 @@
   <five:registerPackage package="." initialize=".initialize" />
 
   <include package=".browser" />
-  
+  <include package=".upgrades" />
+
   <!-- the quickupload portlet is an example on how to use the quickupload view -->
   <include package=".portlet" />
-  
+
   <i18n:registerTranslations directory="locales" />
-       
+
   <genericsetup:registerProfile
       name="default"
       title="Plone Quick Upload"
       directory="profiles/default"
       description="A quick upload form for Plone"
       provides="Products.GenericSetup.interfaces.EXTENSION"
-      /> 
+      />
 
 </configure>
