@@ -1,0 +1,14 @@
+<configure
+    xmlns="http://namespaces.zope.org/zope"
+    xmlns:genericsetup="http://namespaces.zope.org/genericsetup"
+    i18n_domain="extranetprivr">
+
+  <genericsetup:upgradeStep
+      title="Migration profile for extranetprivr.policy to Plone 4"
+      description="Migration profile for extranetprivr.policy to 1100"
+      source="1.0.3"
+      destination="2"
+      handler=".upgrades.v1_v2"
+      profile="collective.quickupload:default" />
+
+</configure>
