@@ -1,0 +1,4 @@
+
+def v1_v2(context):
+    context.runImportStepFromProfile('profile-collective.quickupload:default',
+                                     'jsregistry')
