@@ -4,6 +4,10 @@ Changelog
 1.1.2 (unreleased)
 ------------------
 
+* Javascripts are loaded for authenticated users only.
+  Refs http://plone.org/products/collective.quickupload/issues/11.
+  [frisi, thomasdesvenain]
+
 * Fixed portlet field validation.
   [thomasdesvenain]
 
